--- a/rasm/logins/gradient/gradientLogin.css
+++ b/rasm/logins/gradient/gradientLogin.css
@@ -124,93 +124,146 @@
 
 .form{
 	position: absolute;
-	top: calc(42% - 75px);
-	left: calc(42% - 50px);
-	height: 250px;
+	top: 0;
+	left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+	height: 400px;
 	width: 340px;
 	padding: 10px;
-    background-color: rgba(255, 159, 64, 0);;
-    box-shadow: 1px 1px 50px #c9630f;
+  background-color: rgba(255, 159, 64, 0);
+  border-radius: 20px;
+  box-shadow: 1px 1px 50px #c9630f;
 	z-index: 2; 
+  text-align: center;
 }
-.form : after{
-	opacity: 0.3;
-}
-.login{ 
-	width: 310px;
-	padding: 10px;
-	z-index: 2;
-}
+ 
+.form span{
+    font-family: 'Exo', sans-serif;
+    font-size: 35px;
+    font-weight: 200; 
+  }
+.form input[type=text]{
+    width: 300px;
+    height: 30px;
+    background: transparent;
+    border: 1px solid rgba(255,255,255,0.6);
+    border-radius: 2px;
+    color: #fff;
+    font-family: 'Exo', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 4px;
+    margin-bottom: 25px;
+    border-radius: 5px;
+  }
 
-.login span{
-	font-family: 'Exo', sans-serif;
-	font-size: 35px;
-	font-weight: 200;
-  	color: white;
-}
-.login input[type=text]{
-	width: 300px;
-	height: 30px;
-	background: transparent;
-	border: 1px solid rgba(255,255,255,0.6);
-	border-radius: 2px;
-	color: #fff;
-	font-family: 'Exo', sans-serif;
-	font-size: 16px;
-	font-weight: 400;
-	padding: 4px;
-}
+  .form input[type=password]{
+    width: 300px;
+    height: 30px;
+    background: transparent;
+    border: 1px solid rgba(255,255,255,0.6);
+    border-radius: 2px;
+    color: #fff;
+    font-family: 'Exo', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 4px;
+    border-radius: 5px;
+    margin-bottom: 25px;
+  }
+  .form input[type=button]{
+    width: 310px;
+    height: 35px;
+    background: #fff;
+    border: 1px solid #fff;
+    cursor: pointer;
+    border-radius: 2px;
+    color: #a18d6c;
+    font-family: 'Exo', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 6px;
+    margin-top: 10px;
+    border-radius: 5px;
+  }
 
-.login input[type=password]{
-	width: 300px;
-	height: 30px;
-	background: transparent;
-	border: 1px solid rgba(255,255,255,0.6);
-	border-radius: 2px;
-	color: #fff;
-	font-family: 'Exo', sans-serif;
-	font-size: 16px;
-	font-weight: 400;
-	padding: 4px;
-	margin-top: 10px;
-}
 
-.login input[type=button]{
-	width: 310px;
-	height: 35px;
-	background: #fff;
-	border: 1px solid #fff;
-	cursor: pointer;
-	border-radius: 2px;
-	color: #a18d6c;
-	font-family: 'Exo', sans-serif;
-	font-size: 16px;
-	font-weight: 400;
-	padding: 6px;
-	margin-top: 10px;
-}
+  .form input[type=text]:focus{
+    outline: none;
+    border: 1px solid rgba(255,255,255,0.9);
+  }
 
-.login input[type=button]:hover{
-	opacity: 0.8;
-}
+  .form input[type=password]:focus{
+    outline: none;
+    border: 1px solid rgba(255,255,255,0.9);
+  }
+  .form input[type=button]:focus{
+    outline: none;
+  }
+  #remember { 
+      position: absolute;
+      font-size: 13px;
+      font-family: 'Hind', sans-serif;
+      color: white; 
+      margin-top: 0.5%;
+  }
+  #forgotten {
+      position: absolute;
+      font-size: 12px;
+      font-family: 'Hind', sans-serif;
+      color: white; 
+      cursor: pointer;
+      -webkit-transition: all 2s ease-in-out;
+      -moz-transition: all 2s ease-in-out;
+      -o-transition: all 2s ease-in-out;
+      transition: all 0.2s ease-in-out;
+      margin-left: 180px; 
+      margin-top: 0.5%;
+  }
 
-.login input[type=button]:active{
-	opacity: 0.6;
-}
-
-.login input[type=text]:focus{
-	outline: none;
-	border: 1px solid rgba(255,255,255,0.9);
-}
-
-.login input[type=password]:focus{
-	outline: none;
-	border: 1px solid rgba(255,255,255,0.9);
-}
-
-.login input[type=button]:focus{
-	outline: none;
-}
+  .squaredThree { 
+      position: relative;
+      margin: 20px auto;
+      text-align: start;
+      margin-left: 5%;
+  }
+  .squaredThree label {
+    margin-left: -20px;
+    width: 15px;
+    height: 15px;
+    cursor: pointer;
+    position: absolute; 
+    background: -webkit-linear-gradient(top, #222222 0%, #45484d 100%);
+    background: linear-gradient(to bottom, #c2b698 0%, #ffffff 100%);
+    border-radius: 4px;
+    box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.5), 0px 1px 0px rgba(255, 255, 255, 0.4);
+  }
+  .squaredThree label:after {
+    content: '';
+    width: 5px;
+    height: 2px;
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    border: 3px solid #6c6c63;
+    border-top: none;
+    border-right: none;
+    background: transparent;
+    opacity: 0;
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+  }
+  .squaredThree label:hover::after {
+    opacity: 0.3;
+  }
+  .squaredThree input[type=checkbox] {
+    visibility: hidden;
+  }
+  .squaredThree input[type=checkbox]:checked + label:after {
+    opacity: 1;
+  }
 
 ::-webkit-input-placeholder{
    color: rgba(255,255,255,0.6);
